--- a/css/style.css
+++ b/css/style.css
@@ -20,23 +20,29 @@ strong {
 
 body {
 	font-family: 'Open Sans', sans-serif;
+	background-color: #fff;
+	background-repeat: no-repeat;
+	background-position: top;
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 .header {
 	background-color: #2a416b;
-	background-repeat: no-repeat;
-	background-position: top;
-	background-attachment: fixed;
-	background-size: 100%;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: initial;
+	z-index: 99;
 }
 
 #logo {
 	margin: 0.5em;
-	max-height: 1em;
+	max-height: 6em;
+}
+
+.logo-div {
+	margin-left: 20em;
 }
 
 .subheader {
@@ -48,13 +54,18 @@ body {
 	color: #fff;
 }
 
+.body-top {
+	background-color: #fff;
+	padding-top: 6em;
+}
+
+.body-middle {
+	margin-top: 4em;
+}
+
 .footer {
 	color: #fff;
 	background-color: #2a416b;
-	background-repeat: no-repeat;
-	background-position: bottom;
-	background-attachment: fixed;
-	background-size: 100%;
 }
 
 .footer, .footer p {
@@ -73,6 +84,14 @@ li {
 }
 
 @media only screen and (min-width: 40.063em) { 
-    .header, .footer { background-image: url(../img/tiny-bridge.jpg) }
+    body { 
+    	background-image: url(../img/sanfran.jpg);
+    	background-color: #2a416b; 
+    	}
+	.header { position: fixed; }
+}
 
+.transparent {
+  background:#fff;
+  background:rgba(255,255,255,0.73);
 }
