--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@ body {
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: initial;
+	max-width: 100%;
 	z-index: 99;
 	max-height: 100%;
 }
 
 .header-text {
-	background-image: url(../img/transparent-d.png);
+	background-image: url(../img/logo-small.png);
 	background-repeat: no-repeat;
 	background-position: left;
 	background-size: contain;
