--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+h1 {
+	color: #fff;
+	font-family: 'Roboto Slab', serif;
+	font-weight: bold;
+}
+
+h2 {
+	color: #2a416b;
+	font-family: 'Roboto Slab', serif;
+}
+
+h3 {
+	color: #2a416b;
+	font-family: 'Roboto Slab', serif;
+}
+
+strong {
+	color: #2a416b;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: #fff;
@@ -7,39 +27,6 @@ body {
 	background-size: cover;
 }
 
-/* basic utility class to make things semitransparent white */
-.transparent {
-  background:#fff;
-  background:rgba(255,255,255,0.73);
-}
-
-/* Header text styling */
-h1 {
-	color: #fff;
-	font-family: 'Roboto Slab', serif;
-	font-weight: bold;
-}
-
-h2, h3 {
-	color: #2a416b;
-	font-family: 'Roboto Slab', serif;
-}
-
-strong {
-	color: #2a416b;
-}
-
-#subtitle {
-	font-size: 1.5rem;
-	color: #fff;
-}
-
-.subheader {
-	font-size: 1.3rem;
-}
-/* end header text */
-
-/* Header styling */
 .header {
 	background-color: #2a416b;
 	width: 100%;
@@ -62,37 +49,56 @@ strong {
 	max-height: 5.5em;
 	float: left;
 }
-/* end header */
 
-/* Footer styling */
-.footer, .footer p {
+.logo-div {
+	margin-left: 20em;
+}
+
+.subheader {
+	font-size: 1.3rem;
+}
+
+#subtitle {
+	font-size: 1.5rem;
+	color: #fff;
+}
+
+.body-top {
+	background-color: #fff;
+}
+
+.footer {
 	color: #fff;
 	background-color: #2a416b;
+}
+
+.footer, .footer p {
 	font-weight: bold;
 }
 
-.footer ul {
+ul {
 	list-style-type: none;
 	text-align: center;
 }
 
-.footer li {
+li {
 	display: inline-block;
 	padding-left: 3em;
 	padding-right: 3em;
 }
-/* end footer */
 
-/* Some padding tweaks once the page gets bigger than mobile size */
-/* Background image lives here too */
 @media only screen and (min-width: 40.063em) { 
     body { 
     	background-image: url(../img/sanfran.jpg);
     	background-color: #2a416b; 
     	}
 	.header { position: fixed; }
-	.body-top { padding: 7em 2em 2em; }
-	.body-middle { margin-top: 3em; padding: 2em; }
-	.body-bottom { margin-top: 3em; padding: 1.5em 0em .5em; }
+	.body-top { padding-top: 6em; }
+	.addresses { padding-left: 2.75em; }
+	.body-middle { margin-top: 3em; }
 }
-/* end padding */
+
+.transparent {
+  background:#fff;
+  background:rgba(255,255,255,0.73);
+}
